Updated the csv folder source setup